# millesima-ai-engine

./: README.md  cleaning.py  learning.ipynb  main.py  mkdocs.yml  pyproject.toml  requirements.txt  scraper.py  test_main.py
.github/: dependabot.yml
.github/workflows/: python-app.yml  static.yml
docs/: index.md
src/: cleaning.py  learning.py  scraper.py
tests/: test_cleaning.py  test_scraper.py
