[project]
name = "projet-millesima-s6"
version = "0.1.0"
dependencies = [
    "requests==2.33.0",
    "beautifulsoup4==4.14.3",
    "pandas==3.0.1",
    "tqdm==4.67.3",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[project.optional-dependencies]
test = ["pytest==9.0.2", "requests-mock==1.12.1", "flake8==7.3.0"]
doc = ["mkdocs<2.0.0", "mkdocs-material==9.7.6", "mkdocstrings[python]"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
